# mool

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
docs/: compatibility.md
mool/: Cargo.toml  build.rs
mool-macros/: Cargo.toml
mool-macros-impl/: Cargo.toml
mool-macros-impl/src/: filterable.rs  lib.rs  model.rs  record.rs  record_types.rs  schemable.rs  typed_handles.rs
mool-macros-impl/src/record/: codegen.rs  mod.rs
mool-macros-impl/src/schemable/: mod.rs  parser.rs
mool-macros-impl/src/sql_enum/: attrs.rs  codegen.rs  mod.rs  model.rs  rename.rs  tests.rs
mool-macros/src/: embedded.rs  lib.rs
mool/benches/: batch_insert_planning.rs
mool/examples/: basic_crud_planning.rs  batch_insert_returning.rs  cte.rs  datetime.rs  enums.rs  filters.rs  migrations_embedding.rs  mock_testing.rs  relations.rs
mool/src/: argvalue.rs  backendless.rs  commons.rs  executor.rs  interfaces.rs  lib.rs  migrations.rs  mock.rs  page.rs  prelude.rs  query_error.rs  raw.rs  schema.rs  statement.rs  types.rs
mool/src/backend/: locking.rs  mariadb.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs  unnest.rs
mool/src/datetime/: duration.rs  mod.rs  mysql_family.rs  portable.rs  postgres.rs  sqlite.rs  traits.rs
mool/src/enums/: error.rs  mod.rs  postgres_array.rs  schema.rs  storage.rs  traits.rs
mool/src/executor/: mod.rs  session.rs
mool/src/filters/: builder.rs  mod.rs  traits.rs
mool/src/migrations/: engine.rs
mool/src/placeholders/: dialect.rs  error.rs  iter.rs  mod.rs  resolve.rs  tests.rs
mool/src/placeholders/tests/: iter.rs  properties.rs  resolve.rs
mool/src/queries/: api.rs  batch.rs  batch_validation.rs  binds.rs  expr.rs  extension.rs  handles.rs  mod.rs  output.rs  plan.rs  planning.rs  render_window.rs  scope.rs  set.rs  source.rs  terminals.rs  traits.rs  validate.rs  values.rs  window.rs
mool/src/queries/dialect/: common.rs  features.rs  mariadb.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs
mool/src/queries/executables/: mod.rs  owned.rs  pagination.rs  read.rs  returning.rs  scalar.rs  types.rs  unnest.rs  write.rs
mool/src/queries/functions/: aggregate.rs  arrays.rs  cast.rs  common.rs  datetime.rs  json.rs  mariadb.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs
mool/src/queries/planning/: mod.rs  scope_plans.rs
mool/src/queries/render/: expr.rs  mod.rs  params.rs  projection.rs  sources.rs  statements.rs  write.rs
mool/src/relations/: backref.rs  join.rs  mod.rs  prefetch.rs  query.rs  reference.rs
mool/tests/: backend_rendering.rs  batch_writes_sqlx.rs  configuration.rs  datetime_rendering.rs  datetime_sqlx.rs  db_builders.rs  embedded_migrations.rs  mock_session.rs  planning_properties.rs  query_conformance.rs  relation_prefetch.rs  schema_models.rs  schema_registry.rs  sqlx_smoke.rs  sqlx_transactions.rs  transaction_sqlite.rs  trybuild.rs  typed_queries.rs
mool/tests/common/: mod.rs
mool/tests/compile/fail/: column_type_mismatch.rs  column_type_mismatch.stderr  datetime_naive_portable.rs  datetime_naive_portable.stderr  datetime_time_naive_portable.rs  datetime_time_naive_portable.stderr  datetime_zoned_portable.rs  datetime_zoned_portable.stderr  filterable_invalid_op.rs  filterable_invalid_op.stderr  legacy_field_attribute.rs  legacy_field_attribute.stderr  legacy_schema_attribute.rs  legacy_schema_attribute.stderr  legacy_validate_attribute.rs  legacy_validate_attribute.stderr  model_conflicting_column_flags.rs  model_conflicting_column_flags.stderr  model_duplicate_column.rs  model_duplicate_column.stderr  model_malformed_reference.rs  model_malformed_reference.stderr  model_sql_enum_conflicting_type.rs  model_sql_enum_conflicting_type.stderr  projection_type_mismatch.rs  projection_type_mismatch.stderr  sql_enum_data_variant.rs  sql_enum_data_variant.stderr  sql_enum_int_missing_code.rs  sql_enum_int_missing_code.stderr  unnest_nested_array.rs  unnest_nested_array.stderr  unsupported_postgres_array.rs  unsupported_postgres_array.stderr  unsupported_returning.rs  unsupported_returning.stderr  unsupported_row_lock.rs  unsupported_row_lock.stderr  variable_type_mismatch.rs  variable_type_mismatch.stderr  (+2 more)
mool/tests/compile/pass/: datetime_contracts.rs  embedded_migrations.rs  migration_engine.rs  migration_engine_postgres.rs  migration_engine_sqlite.rs  mock_available_debug.rs  public_api.rs  sqlx_compat.rs  typed_contracts.rs
mool/tests/fixtures/backendless-consumer/: Cargo.toml
mool/tests/fixtures/backendless-consumer/src/: main.rs
mool/tests/fixtures/backendless-query-rejected/: Cargo.toml
mool/tests/fixtures/backendless-query-rejected/src/: main.rs
mool/tests/fixtures/migrations/: 0001_first.yaml  0002_second.yaml
mool/tests/fixtures/sqlx-test-disabled/: Cargo.toml
mool/tests/fixtures/sqlx-test-disabled/src/: lib.rs
mool/tests/fixtures/sqlx-test-enabled/: Cargo.toml
mool/tests/fixtures/sqlx-test-enabled/src/: lib.rs
scripts/: confidence-check.sh  feature-contracts.sh  integration-tests.sh
