[package]
name = "mool-macros-impl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Internal macro implementation shared by Mool and framework wrappers"

[dependencies]
darling.workspace = true
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
