[package]
name = "mool-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Derive macros for the Mool database toolkit"

[lib]
proc-macro = true

[dependencies]
mool-macros-impl = { path = "../mool-macros-impl", version = "0.1.0" }
proc-macro-crate = "3.2"
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
