[package]
name = "mool-macros"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Derive macros for the Mool database toolkit"

[lib]
proc-macro = true

[dependencies]
mool-macros-impl = { path = "../mool-macros-impl", version = "0.1.1" }
proc-macro-crate = "3.2"
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
