[package]
name = "mool"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "A source-first Rust database toolkit for typed SQL queries, migrations, and model metadata"
readme = "../README.md"

[package.metadata.docs.rs]
features = ["sqlite", "migrations"]
no-default-features = true

[features]
default = []
postgres = ["sqlx/postgres", "gaman/postgres", "gaman/fs"]
mysql = ["sqlx/mysql", "gaman/mysql", "gaman/fs"]
mariadb = ["sqlx/mysql", "gaman/mariadb", "gaman/fs"]
sqlite = ["sqlx/sqlite", "gaman/sqlite", "gaman/fs"]
migrations = ["gaman/fs"]
mock = []
tracing = ["dep:tracing"]

[dependencies]
chrono.workspace = true
gaman.workspace = true
indexmap.workspace = true
mool-macros = { path = "../mool-macros", version = "0.1.2" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing = { version = "0.1", optional = true }
twox-hash.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
trybuild = "1"
sqlx = { workspace = true, features = ["macros", "migrate"] }

[[example]]
name = "filters"
required-features = ["postgres"]

[[bench]]
name = "batch_insert_planning"
harness = false
required-features = ["postgres"]
