[package]
name = "mool-sqlx-test-enabled"
version = "0.0.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
mool = { path = "../../../", default-features = false, features = ["sqlite", "sqlx-test"] }

[dev-dependencies]
sqlx = { version = "=0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
